--- a/docs/study_meeting/2022_detailed_explanation_probabilistic_robotics/2.md
+++ b/docs/study_meeting/2022_detailed_explanation_probabilistic_robotics/2.md
@@ -1,1 +1,24 @@
-### 詳解確率ロボティクスを読む回　第2章 確率・統計の基礎　アーカイブ動画
+### 詳解確率ロボティクスを読む回　第2回　 書記（M1 内田）
+```
+カルマンフィルタの普及
+パーティクルフィルタの普及
+ROBOCUPでMCLが注目された
+SLAMも含めて実装会など多く研究されている
+確率以外にもDNNのニューラルネットの普及
+順番に読まなくてもいいよ
+点群やニューラルネットは扱わない
+ランドマークは互いに識別できるものとして扱う
+・互いにとは？
+章ごとのつながり
+
+2章
+ロボットから得られたデータを使って確率と統計の基礎
+200㎜から計測した光センサとLiDARの値のデータを扱う
+中央値を強制的に整数に（LiDARの値が整数だから）
+規則性のある誤差の原因がバイアス、規則性がない誤差の原因がノイズ
+不変分散だといい
+```
+
+
+### 詳解確率ロボティクスを読む回　第2回　アーカイブ動画
+<iframe width="1000" height="400" src="https://www.youtube.com/embed/Y-1kVwFMiD4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
