Update study meeting detailed explanation probabilistic robotics 1

--- a/docs/study_meeting/2022_detailed_explanation_probabilistic_robotics/1.md
+++ b/docs/study_meeting/2022_detailed_explanation_probabilistic_robotics/1.md
@@ -1,1 +1,10 @@
-### 詳解確率ロボティクスを読む回　第1章 はじめに　アーカイブ動画
+### 詳解確率ロボティクスを読む回　第2回　 書記（M1 池邉）
+後から、思い出した書いたので少ないです。（言い訳）
+
+* オドメトリ  
+車輪の回転から位置・姿勢を求める
+
+* デッドレコニング  
+何らかのデータを積分することによって位置・姿勢を求める
+
+### 詳解確率ロボティクスを読む回　第1章 はじめに　アーカイブ動画（上手く撮れませんでした）
