Feature study-meeting-detailed-explanation-probabilistic-robotics-3

--- a/docs/study_meeting/2022_detailed_explanation_probabilistic_robotics/3.md
+++ b/docs/study_meeting/2022_detailed_explanation_probabilistic_robotics/3.md
@@ -1,1 +1,30 @@
+### 詳解確率ロボティクスを読む回　第3回　 書記（B3 青木）
+```
+**2.2.4 （素朴な）確率分布**
+P → 確率分布
+P(z) → センサ値zがでる確率
+P(z)を与える関数 → 確率質量関数
+
+**2.2.4 確率分布を用いたシミュレーション**
+PzLIDARからセンサ値zをN回抽出する数式 → zN~PzLIDAR
+ドロー → 母集団から個々を抽出する
+サンプリング → 母集団から集団の一部を抽出する
+実際のセンサ値で作ったヒストグラムと、確率分布からN回ドローしたセンサ値で作ったヒストグラムはほぼ同じになる
+
+**2.3 確率モデル**
+作成したシミュレータが完璧かを考えると疑問が生じる
+人は「常識」や「理屈」みたいなものを持って「真の確率分布の姿」を想像しているらしい
+
+**2.3.1 ガウス分布の当てはめ**
+P( a <= z < b ) →センサ値zがa以上b未満になる確率。確率密度関数p(z)をaからbまでで積分して得られる
+確率密度関数を積分して確率が得られる確率分布Pをガウス分布という
+ガウス分布と頻度から求めた確率分布は似たものになる
+ガウス分布はΝ( z | μ, σ^2 )やΝ( μ, σ^2 )と略記される。（パラメータのμは平均値、σ^2は分散）
+確率分布の数式を持ってきてパラメータを求めることをモデル化という
+モデル化で分布に当てはめられる式は確率モデルという
+```
+
+
 ### 詳解確率ロボティクスを読む回　第3回　アーカイブ動画
+
+<iframe width="1000" height="400" src="https://www.youtube.com/embed/h0Qk9jNUBpM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
